retrieve_ENO_DEV1/objects/Wig_Performer_Run__c.object
<CustomObject>
    <fields>
        <fullName>Performer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performer</label>
        <referenceTo>Performer__c</referenceTo>
        <relationshipLabel>Wig Performers &amp; Runs</relationshipLabel>
        <relationshipName>Wig_Performers_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Run</label>
        <referenceTo>Run__c</referenceTo>
        <relationshipLabel>Wig Performers &amp; Runs</relationshipLabel>
        <relationshipName>Wig_Performers_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wig__c</fullName>
        <label>Wig</label>
        <referenceTo>Wig__c</referenceTo>
        <relationshipLabel>Wig Performers &amp; Runs</relationshipLabel>
        <relationshipName>Wig_Performers_Runs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wig Performer &amp; Run</label>
    <nameField>
        <displayFormat>WPR-{000000}</displayFormat>
        <label>Wig Performer &amp; Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wig Performers &amp; Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>